feat:finish login register module

--- a/ILIve/app/src/main/res/layout/activity_login.xml
+++ b/ILIve/app/src/main/res/layout/activity_login.xml
@@ -6,14 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
-<!--    android:fitsSystemWindows="true" -->
-    <!--  app:navGraph="@navigation/nav_login_to_register"  -->
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:defaultNavHost="true"
+        app:navGraph="@navigation/nav_login_to_register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
