--- a/ILIve/app/src/main/res/layout/fragment_protocol.xml
+++ b/ILIve/app/src/main/res/layout/fragment_protocol.xml
@@ -4,93 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/root_background"
-    android:paddingStart="19dp"
-    android:paddingEnd="19dp"
+    android:background="@color/white_80"
     tools:context=".ui.login.LoginFragment">
 
-    <TextView
+    <ImageView
+        android:id="@+id/iv_close"
+        style="@style/TitleIcon"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="16dp"
+        android:src="@mipmap/icon_delete"/>
+
+    <com.hhsj.ilive.widget.CustomFontTextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="11dp"
+        android:layout_marginTop="45dp"
         android:text="@string/license_server_protocol"
-        android:textColor="@color/black_100"
-        android:textSize="20sp"
+        android:textColor="@color/text_verify_code_tips"
+        android:textSize="18sp"
+        app:textFont="Medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/ll_check_read"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@id/textview2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <com.hhsj.ilive.widget.CustomCheckBox
-            android:id="@+id/checkbox_read"
-            android:layout_width="23dp"
-            android:layout_height="23dp"
-            android:button="@null"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/guideline_3" />
-
-        <TextView
-            android:id="@+id/textview1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:textColor="@color/text_protocol_tips"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@id/checkbox_read"
-            app:layout_constraintStart_toEndOf="@id/checkbox_read"
-            app:layout_constraintTop_toTopOf="@id/checkbox_read" />
-
-        <TextView
-            android:id="@+id/tv_protocol_link"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/login_register_text_color"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@id/checkbox_read"
-            app:layout_constraintStart_toEndOf="@id/textview1"
-            app:layout_constraintTop_toTopOf="@id/checkbox_read" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/textview2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="38dp"
-        android:text="@string/register_read_text_2"
-        android:textColor="@color/text_protocol_tips"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/ll_check_read"
-        app:layout_constraintStart_toStartOf="@id/ll_check_read" />
-
-    <TextView
+    <com.hhsj.ilive.widget.CustomFontTextView
         android:id="@+id/tv_content"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="14sp"
-        android:layout_marginBottom="29dp"
-        android:background="@drawable/shape_round_rect_white"
-        android:paddingStart="18dp"
-        android:paddingTop="23dp"
-        android:paddingEnd="18dp"
-        android:paddingBottom="13dp"
+        android:layout_marginTop="24sp"
+        android:layout_marginStart="17dp"
+        android:layout_marginEnd="17dp"
         android:scrollbars="vertical"
+        android:textSize="14sp"
         android:text="@string/license_server_content"
         android:textColor="@color/black_100"
-        app:layout_constraintBottom_toTopOf="@id/ll_check_read"
+        app:layout_constraintTop_toBottomOf="@id/tv_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_title" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
