--- a/ILIve/app/src/main/res/layout/fragment_login.xml
+++ b/ILIve/app/src/main/res/layout/fragment_login.xml
@@ -27,6 +27,7 @@
         android:layout_height="wrap_content"
         android:autofillHints="phone"
         android:ems="10"
+        android:textCursorDrawable="@drawable/shape_edittext_cursor"
         android:hint="@string/input_telephone"
         android:inputType="phone"
         android:maxLength="11"
@@ -48,11 +49,18 @@
         app:layout_constraintTop_toBottomOf="@id/et_telephone" />
 
     <ImageView
+        android:id="@+id/iv_back"
+        style="@style/TitleIcon"
+        android:layout_marginStart="16dp"
+        android:src="@mipmap/icon_go_back"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
         android:id="@+id/iv_help"
-        android:layout_width="22dp"
-        android:layout_height="22dp"
-        android:layout_marginTop="45dp"
-        android:layout_marginEnd="15dp"
+        style="@style/TitleIcon"
+        android:layout_marginEnd="16dp"
         android:src="@mipmap/icon_help_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -95,12 +103,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <com.hhsj.ilive.widget.CustomFontTextView
+    <com.hhsj.ilive.widget.CustomEnableTextView
         android:id="@+id/btn_login"
         style="@style/Login_Regis_Button_Style"
-        android:layout_width="268dp"
-        android:layout_height="48dp"
-        android:enabled="false"
         app:textFont="Regular"
         android:text="@string/obtain_verify_code"
         app:layout_constraintEnd_toEndOf="parent"
