--- a/ILIve/app/src/main/res/layout/fragment_logout.xml
+++ b/ILIve/app/src/main/res/layout/fragment_logout.xml
@@ -5,36 +5,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     android:background="@color/root_background"
     tools:context=".ui.login.LoginFragment">
 
-    <TextView
+    <com.hhsj.ilive.widget.CustomFontTextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/logout_title"
         android:textColor="@color/app_title_color"
-        android:textSize="29sp"
+        android:textSize="27sp"
+        app:textFont="Normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/iv_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="110dp"
+        android:layout_height="110dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_title"
         android:src="@mipmap/icon_logout"/>
 
-    <TextView
+    <com.hhsj.ilive.widget.CustomFontTextView
         android:id="@+id/tv_explain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:textSize="12sp"
+        app:textFont="Light"
         android:text="@string/logout_msg"
         android:textColor="@color/register_login_edit_hint"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,53 +45,64 @@
         android:id="@+id/bottom_ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/shape_dialog_fragment_background"
         android:gravity="center_horizontal"
+        android:background="@drawable/shape_dialog_fragment_background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:orientation="vertical">
 
-        <TextView
+        <com.hhsj.ilive.widget.CustomFontTextView
+            android:id="@+id/tv_tips"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="72dp"
             android:gravity="center"
-            android:layout_marginTop="34dp"
-            android:layout_marginBottom="30dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/view_divider"
             android:text="@string/user_info_logout_dialog_title"
             android:textColor="@color/black_0"
-            android:textSize="15sp" />
+            android:textSize="14sp" />
 
         <View
+            android:id="@+id/view_divider"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/white_40"/>
+            android:layout_height="0.4dp"
+            android:background="@color/white_40"
+            app:layout_constraintTop_toBottomOf="@id/tv_logout"
+            app:layout_constraintStart_toStartOf="parent"/>
 
-        <TextView
+        <com.hhsj.ilive.widget.CustomFontTextView
             android:id="@+id/tv_logout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="52dp"
             android:gravity="center"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp"
+            android:background="@color/white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/bottom_view"
             android:text="@string/user_info_logout_dialog_exit"
             android:textColor="@color/round_rect_button_enable"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
         <View
+            android:id="@+id/bottom_view"
             android:layout_width="match_parent"
-            android:layout_height="10dp"
+            android:layout_height="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/tv_cancel"
             android:background="@color/white_80"/>
 
-        <TextView
+        <com.hhsj.ilive.widget.CustomFontTextView
             android:id="@+id/tv_cancel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:paddingTop="16dp"
-            android:paddingBottom="36dp"
+            android:paddingBottom="30dp"
+            android:background="@color/white"
             android:text="@string/user_info_logout_dialog_cancel"
             android:textColor="@color/black_100"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:textSize="18sp" />
 
     </LinearLayout>
