--- a/ILIve/app/src/main/res/layout/fragment_my.xml
+++ b/ILIve/app/src/main/res/layout/fragment_my.xml
@@ -15,52 +15,52 @@
 
         <ImageView
             android:id="@+id/iv_avatar"
-            android:layout_width="72dp"
-            android:layout_height="72dp"
+            android:layout_width="66dp"
+            android:layout_height="66dp"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="100dp"
             android:src="@mipmap/icon_avatar_rectangle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
+        <com.hhsj.ilive.widget.CustomFontTextView
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
-            android:textColor="@color/black_100"
-            android:textSize="23sp"
+            android:textColor="@color/text_verify_code_tips"
+            android:textSize="21sp"
+            app:textFont="Regular"
             app:layout_constraintStart_toEndOf="@+id/iv_avatar"
             app:layout_constraintTop_toTopOf="@id/iv_avatar" />
 
-        <TextView
+        <com.hhsj.ilive.widget.CustomFontTextView
             android:id="@+id/tv_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:textColor="@color/black_0"
-            android:textSize="16sp"
+            android:textSize="15sp"
             app:layout_constraintStart_toEndOf="@+id/iv_avatar"
             app:layout_constraintStart_toStartOf="@id/tv_name"
             app:layout_constraintTop_toBottomOf="@id/tv_name" />
 
         <ImageView
             android:id="@+id/iv_qr_code"
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:layout_marginStart="48dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_marginEnd="30dp"
             android:src="@mipmap/icon_qr_code"
-            android:layout_marginEnd="28dp"
             app:layout_constraintBottom_toBottomOf="@+id/tv_phone"
             app:layout_constraintEnd_toStartOf="@id/iv_arrow"
             app:layout_constraintTop_toTopOf="@+id/tv_phone" />
 
         <ImageView
             android:id="@+id/iv_arrow"
-            android:layout_width="18dp"
-            android:layout_height="18dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:layout_marginEnd="30dp"
             android:src="@mipmap/icon_arrow_right"
             app:layout_constraintBottom_toBottomOf="@id/iv_qr_code"
@@ -72,7 +72,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="62dp"
         android:layout_marginBottom="50dp"
         android:overScrollMode="never"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -85,8 +85,8 @@
             android:layout_height="match_parent"
             android:background="@color/white_80"
             android:orientation="vertical"
-            android:paddingStart="20dp"
-            android:paddingEnd="18dp">
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp">
 
             <com.hhsj.ilive.widget.CustomMyInfoItemView
                 android:layout_width="match_parent"
