--- a/ILIve/app/src/main/res/layout/fragment_verify_code.xml
+++ b/ILIve/app/src/main/res/layout/fragment_verify_code.xml
@@ -5,28 +5,27 @@
     android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white_100"
-    android:paddingStart="19dp"
-    android:paddingEnd="19dp"
+    android:background="@color/white_80"
     tools:context=".ui.login.LoginFragment">
 
-    <TextView
+    <com.hhsj.ilive.widget.CustomFontTextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/input_verification_code"
         android:textColor="@color/app_title_color"
-        android:textSize="29sp"
+        android:textSize="27sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <com.hhsj.ilive.widget.CustomFontTextView
         android:id="@+id/tv_verify_code_tip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:textSize="13sp"
+        android:textColor="@color/text_verify_code_tips"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_title" />
@@ -35,36 +34,33 @@
         android:id="@+id/verify_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_verify_code_tip" />
 
-    <TextView
+    <com.hhsj.ilive.widget.CustomFontTextView
         android:id="@+id/tv_verify_code_msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
-        android:textColor="@color/black_40"
+        android:textColor="@color/text_verify_code_tips"
         android:textSize="13sp"
+        app:textFont="Regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/verify_code" />
 
     <ImageView
         android:id="@+id/iv_back"
-        style="@style/LeftActionIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/TitleIcon"
+        android:layout_marginStart="16dp"
         android:src="@mipmap/icon_go_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/iv_help"
-        style="@style/RightActionIcon"
-        android:layout_width="44dp"
-        android:layout_height="44dp"
+        style="@style/TitleIcon"
+        android:layout_marginEnd="16dp"
         android:src="@mipmap/icon_help_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
