--- a/ILIve/app/src/main/res/layout/layout_home_tab_item.xml
+++ b/ILIve/app/src/main/res/layout/layout_home_tab_item.xml
@@ -3,22 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:paddingTop="24dp"
-    android:paddingBottom="24dp">
+    android:paddingBottom="34dp">
 
     <ImageView
         android:id="@+id/iv_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <com.hhsj.ilive.widget.CustomFontTextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="12sp"
+        android:layout_height="19dp"
+        android:textSize="10sp"
+        app:textFont="Normal"
+        android:layout_marginBottom="2dp"
         app:layout_constraintStart_toStartOf="@id/iv_icon"
         app:layout_constraintEnd_toEndOf="@id/iv_icon"
         app:layout_constraintTop_toBottomOf="@id/iv_icon"/>
