--- a/ILIve/app/src/main/res/layout/verify_code_layout.xml
+++ b/ILIve/app/src/main/res/layout/verify_code_layout.xml
@@ -5,149 +5,113 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <TextView
+    <com.hhsj.ilive.widget.CustomFontTextView
         android:id="@+id/tv_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:background="@null"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:textColor="@color/text_verify_code_tips"
+        android:background="@mipmap/background_input_verify_code"
         android:gravity="center"
         android:maxLength="1"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@id/view_1"
-        app:layout_constraintEnd_toEndOf="@id/view_1"
-        app:layout_constraintStart_toStartOf="@id/view_1"
+        android:textSize="22sp"
+        android:layout_marginStart="30dp"
+        app:textFont="Regular"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/tv_2"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:id="@+id/view_1"
-        android:layout_width="50dp"
-        android:layout_height="1dp"
-        android:layout_marginStart="54dp"
-        android:background="@color/register_login_edit_hint"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/view_2"
-        app:layout_constraintStart_toStartOf="parent" />
+    <com.hhsj.ilive.widget.CustomFontTextView
+        android:id="@+id/tv_2"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:textColor="@color/text_verify_code_tips"
+        android:background="@mipmap/background_input_verify_code"
+        android:gravity="center"
+        android:maxLength="1"
+        android:textSize="22sp"
+        app:textFont="Regular"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        app:layout_constraintStart_toEndOf="@id/tv_1"
+        app:layout_constraintEnd_toStartOf="@id/tv_3"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.hhsj.ilive.widget.CustomFontTextView
+        android:id="@+id/tv_3"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:textColor="@color/text_verify_code_tips"
+        android:background="@mipmap/background_input_verify_code"
+        android:gravity="center"
+        android:maxLength="1"
+        android:textSize="22sp"
+        app:textFont="Regular"
+        app:layout_constraintStart_toEndOf="@id/tv_2"
+        app:layout_constraintEnd_toStartOf="@id/tv_4"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.hhsj.ilive.widget.CustomFontTextView
+        android:id="@+id/tv_4"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:textColor="@color/text_verify_code_tips"
+        android:background="@mipmap/background_input_verify_code"
+        android:gravity="center"
+        android:maxLength="1"
+        android:textSize="22sp"
+        app:textFont="Regular"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        app:layout_constraintStart_toEndOf="@id/tv_3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/line_1"
         android:layout_width="2dp"
         android:layout_height="22dp"
         android:layout_marginStart="2dp"
-        android:layout_marginBottom="5dp"
         android:visibility="gone"
-        app:layout_constraintStart_toStartOf="@id/view_1"
-        app:layout_constraintEnd_toEndOf="@id/view_1"
-        app:layout_constraintBottom_toTopOf="@id/view_1"
+        app:layout_constraintStart_toStartOf="@id/tv_1"
+        app:layout_constraintEnd_toEndOf="@id/tv_1"
+        app:layout_constraintBottom_toBottomOf="@id/tv_1"
+        app:layout_constraintTop_toTopOf="@id/tv_1"
         android:background="@color/round_rect_button_enable" />
-
-    <TextView
-        android:id="@+id/tv_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:background="@null"
-        android:gravity="center"
-        android:maxLength="1"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@id/view_2"
-        app:layout_constraintEnd_toEndOf="@id/view_2"
-        app:layout_constraintStart_toStartOf="@id/view_2"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/view_2"
-        android:layout_width="50dp"
-        android:layout_height="1dp"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="35dp"
-        android:background="@color/register_login_edit_hint"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/view_3"
-        app:layout_constraintStart_toEndOf="@id/view_1" />
 
     <View
         android:id="@+id/line_2"
         android:layout_width="2dp"
         android:layout_height="22dp"
         android:layout_marginStart="2dp"
-        android:layout_marginBottom="5dp"
         android:visibility="gone"
-        app:layout_constraintStart_toStartOf="@id/view_2"
-        app:layout_constraintEnd_toEndOf="@id/view_2"
-        app:layout_constraintBottom_toTopOf="@id/view_2"
+        app:layout_constraintStart_toStartOf="@id/tv_2"
+        app:layout_constraintEnd_toEndOf="@id/tv_2"
+        app:layout_constraintBottom_toBottomOf="@id/tv_2"
+        app:layout_constraintTop_toTopOf="@id/tv_2"
         android:background="@color/round_rect_button_enable" />
-
-    <TextView
-        android:id="@+id/tv_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:background="@null"
-        android:gravity="center"
-        android:maxLength="1"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@id/view_3"
-        app:layout_constraintEnd_toEndOf="@id/view_3"
-        app:layout_constraintStart_toStartOf="@id/view_3"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/view_3"
-        android:layout_width="50dp"
-        android:layout_height="1dp"
-        android:layout_marginEnd="35dp"
-        android:background="@color/register_login_edit_hint"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/view_4"
-        app:layout_constraintStart_toEndOf="@id/view_2" />
 
     <View
         android:id="@+id/line_3"
         android:layout_width="2dp"
         android:layout_height="22dp"
         android:layout_marginStart="2dp"
-        android:layout_marginBottom="5dp"
         android:visibility="gone"
-        app:layout_constraintStart_toStartOf="@id/view_3"
-        app:layout_constraintEnd_toEndOf="@id/view_3"
-        app:layout_constraintBottom_toTopOf="@id/view_3"
+        app:layout_constraintStart_toStartOf="@id/tv_3"
+        app:layout_constraintEnd_toEndOf="@id/tv_3"
+        app:layout_constraintBottom_toBottomOf="@id/tv_3"
+        app:layout_constraintTop_toTopOf="@id/tv_3"
         android:background="@color/round_rect_button_enable" />
-
-    <TextView
-        android:id="@+id/tv_4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:background="@null"
-        android:gravity="center"
-        android:maxLength="1"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@id/view_4"
-        app:layout_constraintEnd_toEndOf="@id/view_4"
-        app:layout_constraintStart_toStartOf="@id/view_4"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/view_4"
-        android:layout_width="50dp"
-        android:layout_height="1dp"
-        android:layout_marginEnd="54dp"
-        android:background="@color/register_login_edit_hint"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/view_3" />
 
     <View
         android:id="@+id/line_4"
         android:layout_width="2dp"
         android:layout_height="22dp"
         android:layout_marginStart="2dp"
-        android:layout_marginBottom="5dp"
         android:visibility="gone"
-        app:layout_constraintStart_toStartOf="@id/view_4"
-        app:layout_constraintEnd_toEndOf="@id/view_4"
-        app:layout_constraintBottom_toTopOf="@id/view_4"
+        app:layout_constraintStart_toStartOf="@id/tv_4"
+        app:layout_constraintEnd_toEndOf="@id/tv_4"
+        app:layout_constraintBottom_toBottomOf="@id/tv_4"
+        app:layout_constraintTop_toTopOf="@id/tv_4"
         android:background="@color/round_rect_button_enable" />
 
     <EditText
