--- a/ILIve/app/src/main/res/layout/view_my_info_item.xml
+++ b/ILIve/app/src/main/res/layout/view_my_info_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="62dp"
+    android:layout_height="52dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:paddingStart="16dp"
@@ -9,21 +10,22 @@
     android:background="@drawable/shape_round_rect_white">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:layout_width="19dp"
+        android:layout_height="19dp"
+        android:layout_marginEnd="11dp"
         android:src="@mipmap/icon_my_setting" />
 
-    <TextView
+    <com.hhsj.ilive.widget.CustomFontTextView
         android:id="@+id/tv_title"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        app:textFont="Regular"
         android:gravity="center_vertical"
-        android:textColor="@color/text_no_enabled_color"
-        android:textSize="18sp" />
+        android:textColor="@color/text_verify_code_tips"
+        android:textSize="15sp" />
 
-    <TextView
+    <com.hhsj.ilive.widget.CustomFontTextView
         android:id="@+id/tv_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -32,8 +34,8 @@
         android:textSize="18sp" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
         android:src="@mipmap/icon_arrow_right" />
 
 </LinearLayout>
