--- a/ILIve/app/src/main/res/navigation/nav_logout_login.xml
+++ b/ILIve/app/src/main/res/navigation/nav_logout_login.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/userInfoFragment"
-        android:name="com.hhsj.ilive.ui.main.my.UserInfoFragment"
+        android:name="com.hhsj.ilive.ui.main.my.SettingFragment"
         android:label="UserInfoFragment" >
         <action
             android:id="@+id/action_userInfoFragment_to_logOutFragment"
