--- a/ILIve/app/src/main/res/values/style.xml
+++ b/ILIve/app/src/main/res/values/style.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="Login_Regis_Button_Style">
+        <item name="android:layout_width">268dp</item>
+        <item name="android:layout_height">48dp</item>
         <item name="android:gravity">center</item>
         <item name="android:textSize">17sp</item>
         <item name="android:textColor">@color/white_100</item>
-        <item name="android:background">@drawable/selector_rect_button_background</item>
     </style>
 
     <style name="Login_Regis_EditText_Style">
@@ -18,15 +19,9 @@
         <item name="android:windowExitAnimation">@anim/dialog_bottom_down</item>
     </style>
 
-    <style name="LeftActionIcon">
-        <item name="android:paddingTop">22dp</item>
-        <item name="android:paddingStart">1dp</item>
-        <item name="android:paddingEnd">10dp</item>
-    </style>
-
-    <style name="RightActionIcon">
-        <item name="android:paddingTop">22dp</item>
-        <item name="android:paddingStart">10dp</item>
-        <item name="android:paddingEnd">1dp</item>
+    <style name="TitleIcon">
+        <item name="android:layout_width">22dp</item>
+        <item name="android:layout_height">22dp</item>
+        <item name="android:layout_marginTop">45dp</item>
     </style>
 </resources>
