--- a/ILIve/app/src/main/res/layout/fragment_my.xml
+++ b/ILIve/app/src/main/res/layout/fragment_my.xml
@@ -18,7 +18,6 @@
             android:layout_width="66dp"
             android:layout_height="66dp"
             android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
             android:layout_marginTop="100dp"
             android:src="@mipmap/icon_avatar_rectangle"
             app:layout_constraintStart_toStartOf="parent"
@@ -27,9 +26,9 @@
         <com.hhsj.ilive.widget.CustomFontTextView
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="38dp"
+            android:gravity="center"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="5dp"
             android:textColor="@color/text_verify_code_tips"
             android:textSize="21sp"
             app:textFont="Regular"
@@ -39,11 +38,10 @@
         <com.hhsj.ilive.widget.CustomFontTextView
             android:id="@+id/tv_phone"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_height="28dp"
+            android:gravity="center"
             android:textColor="@color/black_0"
             android:textSize="15sp"
-            app:layout_constraintStart_toEndOf="@+id/iv_avatar"
             app:layout_constraintStart_toStartOf="@id/tv_name"
             app:layout_constraintTop_toBottomOf="@id/tv_name" />
 
