--- a/ILIve/app/src/main/res/layout/fragment_user_info.xml
+++ b/ILIve/app/src/main/res/layout/fragment_user_info.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:id="@+id/iv_back"
         style="@style/TitleIcon"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="5dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:src="@mipmap/icon_go_back"/>
@@ -23,18 +23,18 @@
         app:textFont="Medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/iv_back"
         app:layout_constraintTop_toTopOf="@+id/iv_back"/>
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/scrollview"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="34dp"
-        android:layout_marginBottom="40dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="22dp"
         android:overScrollMode="never"
-        app:layout_constraintBottom_toTopOf="@id/tv_logout"
+        app:layout_constraintTop_toBottomOf="@id/tv_title"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title">
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -67,6 +67,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp" />
+
+            <com.hhsj.ilive.widget.CustomMyInfoItemView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp" />
+
+            <com.hhsj.ilive.widget.CustomMyInfoItemView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp" />
+
+            <com.hhsj.ilive.widget.CustomMyInfoItemView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
@@ -77,9 +92,9 @@
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="30dp"
-        android:text="@string/log_out"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="28dp"
+        android:text="@string/safe_log_out"
+        app:layout_constraintTop_toBottomOf="@id/scrollview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
