--- a/ILIve/app/src/main/res/layout/fragment_verify_code.xml
+++ b/ILIve/app/src/main/res/layout/fragment_verify_code.xml
@@ -42,7 +42,7 @@
         android:id="@+id/tv_verify_code_msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/text_verify_code_tips"
+        android:textColor="@color/black_40"
         android:textSize="13sp"
         app:textFont="Regular"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +52,7 @@
     <ImageView
         android:id="@+id/iv_back"
         style="@style/TitleIcon"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="5dp"
         android:src="@mipmap/icon_go_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -60,7 +60,7 @@
     <ImageView
         android:id="@+id/iv_help"
         style="@style/TitleIcon"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="5dp"
         android:src="@mipmap/icon_help_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
