--- a/ILIve/app/src/main/res/layout/verify_code_layout.xml
+++ b/ILIve/app/src/main/res/layout/verify_code_layout.xml
@@ -122,6 +122,8 @@
         android:cursorVisible="false"
         android:inputType="number"
         android:maxLength="4"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:textColor="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
