--- a/ILIve/app/src/main/res/layout/fragment_qr_code_card.xml
+++ b/ILIve/app/src/main/res/layout/fragment_qr_code_card.xml
@@ -73,6 +73,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@color/blue_100"
+                    android:transitionName="ImageQrCode"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
