--- a/ILIve/app/src/main/res/layout/fragment_login_for_logout.xml
+++ b/ILIve/app/src/main/res/layout/fragment_login_for_logout.xml
@@ -19,6 +19,7 @@
         android:id="@+id/iv_avatar"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginTop="120dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,9 +27,9 @@
     <com.hhsj.ilive.widget.CustomFontTextView
         android:id="@+id/tv_phone"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:textSize="19sp"
+        android:layout_height="30dp"
+        android:layout_marginTop="12dp"
+        android:textSize="20sp"
         app:textFont="Regular"
         app:layout_constraintEnd_toEndOf="@id/iv_avatar"
         app:layout_constraintStart_toStartOf="@id/iv_avatar"
