--- a/ILIve/app/src/main/res/layout/fragment_login.xml
+++ b/ILIve/app/src/main/res/layout/fragment_login.xml
@@ -70,7 +70,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/iv_setting"
+        android:id="@+id/iv_help"
         style="@style/TitleIcon"
         android:layout_marginEnd="5dp"
         android:src="@mipmap/icon_help_logo"
