--- a/ILIve/app/src/main/res/layout/fragment_update_phone_confirm.xml
+++ b/ILIve/app/src/main/res/layout/fragment_update_phone_confirm.xml
@@ -73,7 +73,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
 
         <com.hhsj.ilive.widget.CustomFontTextView
-            android:id="@+id/tv_logout"
+            android:id="@+id/tv_confirm"
             android:layout_width="match_parent"
             android:layout_height="52dp"
             android:gravity="center"
